QtQml: Wake type loader thread on engine shutdown if necessary

If the type loader thread is waiting for the main thread to process a
message, we cannot shut it down without waking it first. However, having
locked the mutex, we can detect this situation by exemining the mainSync
member. If that is set, wake the type loader thread one last time. It
will then have the opportunity to see the isShutdown flag we've just set
and dutifully shut itself down.

Amends commit 73b2e33d7854618b881aff9a8230cce24ce7d7f9

Fixes: QTBUG-128269
Change-Id: I8bf897010972de5e40e717846f3ff106e040dbe6
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 2296fad08d2d2db74e26bc7e5f339a21800f581a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 998641d0ea8a188238e07fa93744d3de33b4f43b)