tests/auto/qml/qqmltypeloader/data/SlowImporter/A.qml
@@ -1,0 +1,2 @@
+import Slow
+SlowStuff {}
